# NewBifrostBrews

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: a2261d5ae847_fts5_search_index.py  c8262e520049_initial_schema.py
app/: config.py  db.py  main.py  models.py  templating.py
app/routers/: public.py
app/services/: content.py  markdown.py
app/templates/: base.html
app/templates/partials/: _article_card.html  _difficulty_horns.html  _hero_placeholder.html  _pagination.html  _recipe_card.html  _search_results.html  _stat_badges.html  _tag_pill.html
app/templates/public/: 404.html  _recipe_summary_card.html  about.html  article_detail.html  article_list.html  home.html  recipe_detail.html  recipe_list.html  search.html  tag.html
scripts/: seed.py
specs/: 00-overview.md  01-architecture.md  02-backend-spec.md  03-frontend-ui-spec.md
styles/: input.css
