[project]
name = "bifrostbrews"
version = "0.1.0"
description = "Bifrost Brews -- mead-making blog and recipe site"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "markdown-it-py==3.0.0",
    "pygments==2.19.1",
    "nh3==0.2.19",
    "pillow==11.1.0",
    "itsdangerous==2.2.0",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.20",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "freezegun==1.5.1",
]

[tool.uv]
package = false
